Modified thr_pool.c to avoid compiler warnings.

--- a/Makefile.linux
+++ b/Makefile.linux
@@ -9,8 +9,8 @@ LDFLAGS = -lncurses -lm
 default: $(TARGET)
 all: default
 
-OBJECTS = $(patsubst %.c, %.o, $(wildcard *.c libprogressbar/*.c))
-HEADERS = $(wildcard *.h libprogressbar/*.h)
+OBJECTS = $(patsubst %.c, %.o, $(wildcard *.c libprogressbar/*.c thr_pool/*.c))
+HEADERS = $(wildcard *.h libprogressbar/*.h thr_pool/*.h)
 
 %.o: %.c $(HEADERS)
 	$(CC) $(CFLAGS) -c $< -o $@
@@ -21,5 +21,5 @@ $(TARGET): $(OBJECTS)
 	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJECTS) -Wall $(LIBS) -o $@
 
 clean:
-	-rm -f *.o libprogressbar/*.o
+	-rm -f *.o libprogressbar/*.o thr_pool/*.o
 	-rm -f $(TARGET)
